--- a/micuenta.html
+++ b/micuenta.html
@@ -56,6 +56,11 @@
                 </div>
 
                 <div class="campos">
+                    <label>Correo:</label>
+                    <input class="input-text" type="text" name="correo" id="correo" size="20">
+                </div>
+
+                <div class="campos">
                     <label>Contraseña:</label>
                     <input class="input-text" type="password" name="contra" id="contra" size="20">
                 </div>
