--- a/captura.html
+++ b/captura.html
@@ -104,7 +104,8 @@
                                     <th class="centrado">Precio</th>
                                     <th class="centrado">Stock</th>
                                     <th class="centrado">Artista</th>
-                                    <th class="centrado">Acciones</th>
+                                    <th class="centrado">Editar</th>
+                                    <th class="centrado">Eliminar</th>
                                 </tr>
                             </thead>
                             <tbody id="tableBody_usuarios"></tbody>
